# ffmpeg_wrapper

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  LICENSE  README.md  ffmpeg_wrapper.cpp  vcpkg.json
.github/actions/linux-setup/: action.yml
.github/workflows/: clang_format.yml  clang_tidy.yml  cmake.yml  mac_cmake.yml  windows_cmake.yml
Ffmpeg/: CMakeLists.txt
cmake/: enable_sanitizers.cmake  iwyu.cmake  iwyu_mapping.imp  set_rpath.cmake
dependencies/: CMakeLists.txt
dependencies/boost/: CMakeLists.txt
dependencies/libavinc/: CMakeLists.txt
dependencies/libavinc/include/libavinc/: libavinc.hpp
headers/: libavinc.hpp  videodecoder.h  videoencoder.h
headers/ffmpeg_wrapper/: videodecoder.h  videoencoder.h
libavinc/: CMakeLists.txt  readme.md
libavinc/include/libavinc/: libavinc.hpp
packaging/: CMakeLists.txt  Config.cmake.in
src/: CMakeLists.txt  libavinc.cpp  videodecoder.cpp  videoencoder.cpp
src/headers/ffmpeg_wrapper/: videodecoder.h  videoencoder.h
tests/: CMakeLists.txt
tests/in-source-build/: CMakeLists.txt
tests/in-source-build/project/: CMakeLists.txt  main.cpp  vcpkg.json
tests/libavinc-tests/: CMakeLists.txt  test_libavinc.cpp
tests/video-decoder-tests/: CMakeLists.txt  test_decoder.cpp
tests/video-decoder-tests/data/: generate_test_frames.py
tests/video-encoder-tests/: CMakeLists.txt
tests/video-encoder-tests/project/: CMakeLists.txt  test_main.cpp
